--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ beautifulsoup4==4.9.3
 bs4==0.0.1
 certifi==2021.5.30
 Django==3.2.6
+django-cors-headers==3.8.0
 djangorestframework==3.12.4
 gunicorn==20.1.0
 pytz==2021.1
